edition = "2023";  // successor to proto2 and proto3

package sensor;

import "internalapi/virtualmachine/v1/index_report.proto";
import "google/protobuf/go_features.proto";

option go_package = "./internalapi/sensor;sensor";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

message UpsertVirtualMachineIndexReportRequest {
  virtualmachine.v1.IndexReport index_report = 1 [lazy = true];
}

message UpsertVirtualMachineIndexReportResponse {
  bool success = 1;
}

// A Sensor service that allows Collector to send virtual machine index reports.
service VirtualMachineIndexReportService {
  rpc UpsertVirtualMachineIndexReport(UpsertVirtualMachineIndexReportRequest) returns (UpsertVirtualMachineIndexReportResponse) {}
}
